[gd_scene load_steps=57 format=2]

[ext_resource path="res://Enemies/wolf/sprites/Wolf/Idle/__Wolf_Idle_005.png" type="Texture" id=1]
[ext_resource path="res://Enemies/wolf/sprites/Wolf/Attack/__Wolf_Attack_006.png" type="Texture" id=2]
[ext_resource path="res://Enemies/wolf/sprites/Wolf/Idle/__Wolf_Idle_008.png" type="Texture" id=3]
[ext_resource path="res://Enemies/wolf/sprites/Wolf/Idle/__Wolf_Idle_003.png" type="Texture" id=4]
[ext_resource path="res://Enemies/wolf/sprites/Wolf/Idle/__Wolf_Idle_000.png" type="Texture" id=5]
[ext_resource path="res://Enemies/wolf/sprites/Wolf/Idle/__Wolf_Idle_006.png" type="Texture" id=6]
[ext_resource path="res://Enemies/wolf/sprites/Wolf/Idle/__Wolf_Idle_007.png" type="Texture" id=7]
[ext_resource path="res://Enemies/wolf/sprites/Wolf/Idle/__Wolf_Idle_001.png" type="Texture" id=8]
[ext_resource path="res://Enemies/wolf/sprites/Wolf/Attack/__Wolf_Attack_000.png" type="Texture" id=9]
[ext_resource path="res://Enemies/wolf/sprites/Wolf/Attack/__Wolf_Attack_001.png" type="Texture" id=10]
[ext_resource path="res://Enemies/wolf/sprites/Wolf/Idle/__Wolf_Idle_011.png" type="Texture" id=11]
[ext_resource path="res://Enemies/wolf/sprites/Wolf/Attack/__Wolf_Attack_002.png" type="Texture" id=12]
[ext_resource path="res://Enemies/wolf/sprites/Wolf/Attack/__Wolf_Attack_003.png" type="Texture" id=13]
[ext_resource path="res://Enemies/wolf/sprites/Wolf/Attack/__Wolf_Attack_005.png" type="Texture" id=14]
[ext_resource path="res://Enemies/wolf/sprites/Wolf/Idle/__Wolf_Idle_002.png" type="Texture" id=15]
[ext_resource path="res://Enemies/wolf/sprites/Wolf/Idle/__Wolf_Idle_004.png" type="Texture" id=16]
[ext_resource path="res://Enemies/wolf/sprites/Wolf/Idle/__Wolf_Idle_009.png" type="Texture" id=17]
[ext_resource path="res://Enemies/wolf/sprites/Wolf/Idle/__Wolf_Idle_010.png" type="Texture" id=18]
[ext_resource path="res://Enemies/wolf/sprites/Wolf/Attack/__Wolf_Attack_004.png" type="Texture" id=19]
[ext_resource path="res://Enemies/wolf/sprites/Wolf/Attack/__Wolf_Attack_007.png" type="Texture" id=20]
[ext_resource path="res://Enemies/wolf/sprites/Wolf/Run/__Wolf_Run_003.png" type="Texture" id=21]
[ext_resource path="res://Enemies/wolf/sprites/Wolf/Run/__Wolf_Run_000.png" type="Texture" id=22]
[ext_resource path="res://Enemies/wolf/sprites/Wolf/Run/__Wolf_Run_001.png" type="Texture" id=23]
[ext_resource path="res://Enemies/wolf/sprites/Wolf/Run/__Wolf_Run_002.png" type="Texture" id=24]
[ext_resource path="res://Enemies/wolf/sprites/Wolf/Run/__Wolf_Run_004.png" type="Texture" id=25]
[ext_resource path="res://Enemies/wolf/sprites/Wolf/Dead/__Wolf_Dead_006.png" type="Texture" id=26]
[ext_resource path="res://Enemies/wolf/sprites/Wolf/Dead/__Wolf_Dead_003.png" type="Texture" id=27]
[ext_resource path="res://Enemies/wolf/sprites/Wolf/Dead/__Wolf_Dead_005.png" type="Texture" id=28]
[ext_resource path="res://Enemies/wolf/sprites/Wolf/Dead/__Wolf_Dead_007.png" type="Texture" id=29]
[ext_resource path="res://Enemies/wolf/sprites/Wolf/Dead/__Wolf_Dead_004.png" type="Texture" id=30]
[ext_resource path="res://Enemies/wolf/sprites/Wolf/Dead/__Wolf_Dead_001.png" type="Texture" id=31]
[ext_resource path="res://Enemies/wolf/sprites/Wolf/Dead/__Wolf_Dead_002.png" type="Texture" id=32]
[ext_resource path="res://Enemies/wolf/sprites/Wolf/Hurt/__Wolf_Hurt_007.png" type="Texture" id=33]
[ext_resource path="res://Enemies/wolf/sprites/Wolf/Dead/__Wolf_Dead_000.png" type="Texture" id=34]
[ext_resource path="res://Wolf.gd" type="Script" id=35]
[ext_resource path="res://Enemies/wolf/sprites/Wolf/Hurt/__Wolf_Hurt_000.png" type="Texture" id=36]
[ext_resource path="res://Enemies/wolf/sprites/Wolf/Hurt/__Wolf_Hurt_003.png" type="Texture" id=37]
[ext_resource path="res://Enemies/wolf/sprites/Wolf/Hurt/__Wolf_Hurt_006.png" type="Texture" id=38]
[ext_resource path="res://Enemies/wolf/sprites/Wolf/Run/__Wolf_Run_005.png" type="Texture" id=39]
[ext_resource path="res://Enemies/wolf/sprites/Wolf/Run/__Wolf_Run_006.png" type="Texture" id=40]
[ext_resource path="res://Enemies/wolf/sprites/Wolf/Run/__Wolf_Run_007.png" type="Texture" id=41]
[ext_resource path="res://Enemies/wolf/sprites/Wolf/Hurt/__Wolf_Hurt_002.png" type="Texture" id=42]
[ext_resource path="res://Enemies/wolf/sprites/Wolf/Hurt/__Wolf_Hurt_004.png" type="Texture" id=43]
[ext_resource path="res://Enemies/wolf/sprites/Wolf/Hurt/__Wolf_Hurt_005.png" type="Texture" id=44]
[ext_resource path="res://Enemies/wolf/sprites/Wolf/Hurt/__Wolf_Hurt_001.png" type="Texture" id=45]
[ext_resource path="res://Enemies/SoftCollision/SoftCollision.tscn" type="PackedScene" id=46]
[ext_resource path="res://Enemies/wanderController/WanderController.tscn" type="PackedScene" id=47]
[ext_resource path="res://Enemies/PlayerDetectionZone/PlayerDetectionZone.tscn" type="PackedScene" id=48]
[ext_resource path="res://HitBoxesAndHurtBoxes/HurtBox.tscn" type="PackedScene" id=49]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=50]
[ext_resource path="res://HitBoxesAndHurtBoxes/HitBox.tscn" type="PackedScene" id=51]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 8 ), ExtResource( 15 ), ExtResource( 4 ), ExtResource( 16 ), ExtResource( 1 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 11 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 21 ), ExtResource( 25 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ) ],
"loop": true,
"name": "run",
"speed": 10.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 19 ), ExtResource( 14 ), ExtResource( 2 ), ExtResource( 20 ) ],
"loop": true,
"name": "attack",
"speed": 10.0
}, {
"frames": [ ExtResource( 36 ), ExtResource( 45 ), ExtResource( 42 ), ExtResource( 37 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 38 ), ExtResource( 33 ) ],
"loop": true,
"name": "hurt",
"speed": 10.0
}, {
"frames": [ ExtResource( 34 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 27 ), ExtResource( 30 ), ExtResource( 28 ), ExtResource( 26 ), ExtResource( 29 ) ],
"loop": true,
"name": "dead",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 94.1488
height = 243.772

[sub_resource type="CircleShape2D" id=3]
radius = 172.771

[sub_resource type="CapsuleShape2D" id=4]
radius = 74.3315
height = 0.0

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 71.3113, 48.1535 )

[node name="Wolf" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 35 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 1 )
animation = "idle"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 45.2711 )
rotation = 1.5708
scale = Vector2( 0.3186, 0.349011 )
shape = SubResource( 2 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 48 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 0.317647, 0.901961, 0.0823529, 1 )
position = Vector2( 0, -118.794 )

[node name="SoftCollision" parent="." instance=ExtResource( 46 )]
position = Vector2( 0, -125.25 )

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( 0, 170.521 )
scale = Vector2( 0.332941, 0.308808 )
shape = SubResource( 3 )

[node name="WanderController" parent="." instance=ExtResource( 47 )]

[node name="HurtBox" parent="." instance=ExtResource( 49 )]
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" parent="HurtBox" index="0"]
modulate = Color( 0.984314, 0.0235294, 0.0235294, 1 )
position = Vector2( 0, 45.2711 )
shape = SubResource( 4 )

[node name="Stats" parent="." instance=ExtResource( 50 )]
max_health = 3

[node name="HitBox" parent="." instance=ExtResource( 51 )]
collision_layer = 64
collision_mask = 16

[node name="CollisionShape2D" parent="HitBox" index="0"]
modulate = Color( 0.992157, 0.0117647, 0.0117647, 1 )
position = Vector2( 0, 45.2711 )
shape = SubResource( 5 )

[node name="Tween" type="Tween" parent="."]

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="invincibility_ended" from="HurtBox" to="." method="_on_HurtBox_invincibility_ended"]
[connection signal="invincibility_started" from="HurtBox" to="." method="_on_HurtBox_invincibility_started"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]

[editable path="PlayerDetectionZone"]
[editable path="SoftCollision"]
[editable path="HurtBox"]
[editable path="HitBox"]
